fix: when there are multiple editors, the focus jumps to the wrong position after inserting content

--- a/examples/miniature-editor.css
+++ b/examples/miniature-editor.css
@@ -17,7 +17,7 @@
 }
 .miniature .lake-root {
   border: 1px solid #d9d9d9;
-  height: 100px;
+  height: 200px;
   overflow: auto;
 }
 .miniature .lake-root-focused {
